--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -17,4 +17,4 @@ mkdocs:
 # Optionally declare the Python requirements required to build your docs
 python:
   install:
-    requirements: mkdocs.txt
+    - requirements: mkdocs.txt
