--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,15 +35,15 @@ plugins:
 
 nav:
   - Overview & Install: index.md
-  - Tutorial 1 - Toy Examples: tutorials.md
-  - Tutorial 2 - How NCUT Works: how_ncut_works.md 
-  - NCUT and t-SNE/UMAP: compare.md
   - Gallery: gallery.md
-  # - Gallery - Application: application_gallery.md
-  - Tutorial 3 - Parameters: parameters.md
-  - Tutorial 4 - Add Nodes: add_nodes.md
-  - Tutorial 5 - Mixing Data: mixing_data.md
-  - Tutorial - Coloring: coloring.md
+  - How NCUT Works: how_ncut_works.md 
+  - NCUT and t-SNE/UMAP: compare.md
+  - Tutorial 1 - Quick Start: tutorials.md
+  - Tutorial 2 - Parameters: parameters.md
+  - Tutorial 3 - Add Nodes: add_nodes.md
+  - Tutorial 4 - Mixing Data: mixing_data.md
+  - Tutorial 5 - Coloring: coloring.md
+  - How to Get Better Segmentation: how_to_get_better_segmentation.md
   - Speed and Performance: speed_and_performance.md
   - Gradient of NCUT: gradient_of_ncut.md
   - API Reference: api_reference.md
