--- a/ncut_pytorch/project.toml
+++ b/ncut_pytorch/project.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "ncut_pytorch"
-version = "0.0.1"
+version = "1.0.7"
 authors = [
   { name="Huzheng Yang", email="huze.yann@gmail.com" },
 ]
