--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,7 +14,7 @@ theme:
     - search.share
     - navigation.expand
     - navigation.indexes
-    - toc.integrate
+    # - toc.integrate
   icon:
     repo: fontawesome/brands/github
   logo: images/ncut.svg
@@ -44,6 +44,7 @@ nav:
   - Tutorial 4 - Mixing Data: mixing_data.md
   - Tutorial 5 - Coloring: coloring.md
   - How to Get Better Segmentation: how_to_get_better_segmentation.md
+  - Memory Usage: memory_usage.md
   - Speed and Performance: speed_and_performance.md
   - Gradient of NCUT: gradient_of_ncut.md
   - API Reference: api_reference.md
