update backbone and documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -73,7 +73,7 @@ nav:
   - Tutorial 4 - Mixing Data: mixing_data.md
   - Tutorial 5 - Coloring: coloring.md
   - How to Get Better Segmentation: how_to_get_better_segmentation.md
-  - Make NCUT Aligned: alignedcut_vs_ncut.md
+  - Why NCUT Needs Aligned: alignedcut_vs_ncut.md
   - Memory Usage: memory_usage.md
   - Speed and Performance: speed_and_performance.md
   - Gradient of NCUT: gradient_of_ncut.md
