--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,9 +51,9 @@ plugins:
 nav:
   - Overview & Install: index.md
   - Gallery: gallery.md
-  - Backbone Models: backbones.md
   - How NCUT Works: how_ncut_works.md 
   - NCUT and t-SNE/UMAP: compare.md
+  - Backbones: backbones.md
   - Tutorial 1 - Quick Start: tutorials.md
   - Tutorial 2 - Parameters: parameters.md
   - Tutorial 3 - Add Nodes: add_nodes.md
