--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,6 +50,7 @@ plugins:
 
 nav:
   - Overview & Install: index.md
+  - Install Trouble Shotting: trouble_shooting.md
   - Gallery: gallery.md
   - How NCUT Works: how_ncut_works.md 
   - NCUT and t-SNE/UMAP: compare.md
