--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,7 @@ theme:
     - search.share
     - navigation.expand
     - navigation.indexes
+    - navigation.sections
     # - toc.integrate
   icon:
     repo: fontawesome/brands/github
@@ -49,23 +50,30 @@ plugins:
           path: [.]
 
 nav:
-  - Overview & Install: index.md
-  - How NCUT Works: how_ncut_works.md 
-  - Backbones: backbones.md
-  - Gallery: gallery.md
-  - NCUT and t-SNE/UMAP: compare.md
-  - Tutorial 1 - Quick Start: tutorials.md
-  - Tutorial 2 - Parameters: parameters.md
-  - Tutorial 3 - Add Nodes: add_nodes.md
-  - Tutorial 4 - Mixing Data: mixing_data.md
-  - Tutorial 5 - Coloring: coloring.md
-  - How to Get Better Segmentation: how_to_get_better_segmentation.md
-  - Make NCUT Aligned: alignedcut_vs_ncut.md
-  - Memory Usage: memory_usage.md
-  - Speed and Performance: speed_and_performance.md
-  - Gradient of NCUT: gradient_of_ncut.md
-  - Install Trouble Shooting: trouble_shooting.md
-  - API Reference: api_reference.md
+  - Overview:
+    - Install & Quick Start: index.md
+    - How NCUT Works: how_ncut_works.md 
+    - Gallery: gallery.md
+    - NCUT and t-SNE/UMAP: compare.md
+
+  - Tutorials:
+    - Tutorial 1 - Quick Start: tutorials.md
+    - Tutorial 2 - Parameters: parameters.md
+    - Tutorial 3 - Add Nodes: add_nodes.md
+    - Tutorial 4 - Mixing Data: mixing_data.md
+    - Tutorial 5 - Coloring: coloring.md
+  - Guides:
+    - How to Get Better Segmentation: how_to_get_better_segmentation.md
+    - Make NCUT Aligned: alignedcut_vs_ncut.md
+    - Memory Usage: memory_usage.md
+    - Speed and Performance: speed_and_performance.md
+    - Gradient of NCUT: gradient_of_ncut.md
+  
+  - API References:
+    - NCUT APIs: api_reference.md
+    - Backbone APIs: backbones.md
+    - Install Trouble Shooting: trouble_shooting.md
+  
   - Demo: demo.md
 
 markdown_extensions:
