--- a/ncut_pytorch/project.toml
+++ b/ncut_pytorch/project.toml
@@ -4,13 +4,14 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "ncut_pytorch"
-version = "1.8.19"
+version = "1.10.0dev1"
 authors = [
   { name="Huzheng Yang", email="huze.yann@gmail.com" },
 ]
 description = "Normalized Cut and Nyström Approximation"
 readme = "README.md"
 requires-python = ">=3"
+license = { text = "MIT" }
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
