--- a/ncut_pytorch/project.toml
+++ b/ncut_pytorch/project.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "ncut_pytorch"
-version = "1.10.0dev1"
+version = "1.10.2"
 authors = [
   { name="Huzheng Yang", email="huze.yann@gmail.com" },
 ]
