--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "ncut_pytorch"
-version = "1.12.0dev"
+version = "1.12.1"
 authors = [
   { name="Huzheng Yang", email="huze.yann@gmail.com" },
 ]
