--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-torch
-torchvision
+torch~=2.0
+#torchvision>=0.15.0
+fpsample>=0.2.0
+pytorch-lightning~=2.0
 pillow
-fpsample
-pytorch-lightning
 numpy
 tqdm
