--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,13 +21,17 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Mathematics",
 ]
 dependencies = [
-    "torch>=2.0.0",
+    "torch~=2.0",
     "fpsample>=0.2.0",
-    "torchvision>=0.15.0",
-    "pillow==*",
-    "pytorch-lightning>=2.0.0",
-    "numpy==*",
-    "tqdm==*"
+    "pytorch-lightning~=2.0",
+    "pillow",
+    "numpy",
+    "tqdm"
+]
+
+[project.optional-dependencies]
+vision = [
+    "torchvision>=0.15.0"
 ]
 
 [project.urls]
