predictor WIP: vision and general predictor are separated

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,4 +3,6 @@ testpaths = unit_tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = --verbose
+addopts = --verbose -m "not slow"
+markers =
+    slow: marks tests as slow (deselected by default)
