--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "ncut_pytorch"
-version = "2.0.0dev3"
+version = "2.0.0"
 authors = [
   { name="Huzheng Yang", email="huze.yann@gmail.com" },
 ]
@@ -31,7 +31,9 @@ dependencies = [
 
 [project.optional-dependencies]
 vision = [
-    "torchvision>=0.15.0"
+    "torchvision>=0.15.0",
+    "opencv-python",
+    "matplotlib",
 ]
 
 [project.urls]
