--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     "pytorch-lightning~=2.0",
     "pillow",
     "numpy",
-    "tqdm"
+    "tqdm",
 ]
 
 [project.optional-dependencies]
@@ -34,6 +34,8 @@ vision = [
     "torchvision>=0.15.0",
     "opencv-python",
     "matplotlib",
+    "scikit-image",
+    "pycolormap_2d",
 ]
 
 [project.urls]
