--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "ncut_pytorch"
 version = "2.0.0"
 authors = [
-  { name="Huzheng Yang", email="huze.yann@gmail.com" },
+    { name = "Huzheng Yang", email = "huze.yann@gmail.com" },
 ]
 description = "Normalized Cut and Nyström Approximation"
 readme = "README.md"
@@ -44,7 +44,7 @@ Github = "https://github.com/huzeyann/ncut_pytorch/"
 PyPI = "https://pypi.org/project/ncut_pytorch/"
 
 [tool.setuptools]
-packages = ["ncut_pytorch", "ncut_pytorch.ncuts", "ncut_pytorch.color", "ncut_pytorch.utils", "ncut_pytorch.dino"]
+find-namespace-packages = ["ncut_pytorch"]
 
 [tool.setuptools.package-data]
 "ncut_pytorch" = ["*.txt", "*.md"]
