--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,13 +21,13 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Mathematics",
 ]
 dependencies = [
-    "torch~=2.0",
+    "torch>=2.7.1",
     "fpsample>=0.2.0",
     "pytorch-lightning~=2.0",
     "numpy",
     "tqdm",
     "pillow",
-    "torchvision>=0.15.0",
+    "torchvision>=0.23.0",
     "opencv-python",
     "matplotlib",
     "scikit-image",
