--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "ncut_pytorch"
-version = "2.1.1"
+version = "2.1.2"
 authors = [
     { name = "Huzheng Yang", email = "huze.yann@gmail.com" },
 ]
@@ -21,21 +21,23 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Mathematics",
 ]
 dependencies = [
-    "torch>=2.7.1",
+    "numpy<2.0",
     "fpsample>=0.2.0",
-    "pytorch-lightning~=2.0",
-    "numpy",
     "tqdm",
     "pillow",
-    "torchvision>=0.23.0",
     "opencv-python",
     "matplotlib",
-    "scikit-image",
-    "pycolormap_2d",
 ]
 
 [project.optional-dependencies]
-vision = [
+torch = [
+    "torch>=2.7.1",
+    "pytorch-lightning~=2.0",
+    "torchvision>=0.23.0",
+]
+cmap = [
+    "pycolormap_2d",
+    "scikit-image",
 ]
 
 [project.urls]
