--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,9 +12,9 @@ build:
     python: "3.10"
 
 mkdocs:
-  configuration: docs/mkdocs.yml
+  configuration: mkdocs.yml
 
 # Optionally declare the Python requirements required to build your docs
 python:
   install:
-    - requirements: docs/mkdocs.txt
+    - requirements: mkdocs.txt
