--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -69,11 +69,11 @@ nav:
     - Tutorial 1 - Quick Start: tutorials.md
     - Tutorial 2 - Discrete NCUT: discrete_ncut.md
     - Tutorial 3 - Hierarchy in NCUT: hierarchy_ncut.md
-    - Tutorial 4 - Feature Alignment: feature_alignment.md
-    - Tutorial 5 - Parameters: parameters.md
-    - Tutorial 6 - Add Nodes: add_nodes.md
-    - Tutorial 7 - Mixing Data: mixing_data.md
-    - Tutorial 8 - Coloring: coloring.md
+    - Tutorial 4 - Channel Tracing: channel_tracing.md
+    - Tutorial 5 - Feature Alignment: feature_alignment.md
+    - Tutorial 6 - Parameters: parameters.md
+    - Tutorial 7 - Add Nodes: add_nodes.md
+    - Tutorial 8 - Mixing Data: mixing_data.md
     - Tutorial 9 - Application - Point Prompting: application_segmentation.md
   
   
